--- a/mini-projects/contract-testing/requirements.txt
+++ b/mini-projects/contract-testing/requirements.txt
@@ -1,5 +1,5 @@
-pytest
-jsonschema
-openapi-spec-validator
-PyYAML
-allure-pytest
+pytest==8.3.4
+jsonschema==4.23.0
+openapi-spec-validator==0.7.1
+PyYAML==6.0.2
+allure-pytest==2.13.5
