--- a/mini-projects/ui-playwright-smoke/requirements.txt
+++ b/mini-projects/ui-playwright-smoke/requirements.txt
@@ -1,5 +1,4 @@
-pytest
-playwright
-pytest-playwright
-allure-pytest
-allure-pytest
+pytest==8.3.4
+playwright==1.49.1
+pytest-playwright==0.7.0
+allure-pytest==2.13.5
