--- a/.github/workflows/pages-report.yml
+++ b/.github/workflows/pages-report.yml
@@ -25,30 +25,20 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
+          cache-dependency-path: |
+            requirements-dev.txt
+            mini-projects/**/requirements.txt
 
-      - name: Install API test dependencies
+      - name: Setup environment
+        run: make setup
+
+      - name: Run tests
         run: |
-          python -m pip install --upgrade pip
-          pip install -r mini-projects/api-requests-pytest/requirements.txt
-
-      - name: Install contract test dependencies
-        run: pip install -r mini-projects/contract-testing/requirements.txt
-
-      - name: Install data quality test dependencies
-        run: pip install -r mini-projects/data-quality-tests/requirements.txt
-
-      - name: Install UI test dependencies
-        run: pip install -r mini-projects/ui-playwright-smoke/requirements.txt
-
-      - name: Install Playwright browser
-        run: python -m playwright install --with-deps chromium
-
-      - name: Run tests with Allure
-        run: |
-          pytest mini-projects/api-requests-pytest --alluredir site/allure-results-api-requests-pytest
-          pytest mini-projects/contract-testing --alluredir site/allure-results-contract-testing
-          pytest mini-projects/data-quality-tests --alluredir site/allure-results-data-quality-tests
-          pytest mini-projects/ui-playwright-smoke --alluredir site/allure-results-ui-playwright-smoke
+          make test-api
+          make test-contract
+          make test-data
+          make test-ui PLAYWRIGHT_INSTALL_ARGS="--with-deps chromium"
 
       - name: Install Allure
         run: |
@@ -59,14 +49,7 @@ jobs:
           allure --version
 
       - name: Generate Allure reports
-        run: |
-          mkdir -p site/reports
-          for dir in site/allure-results-*; do
-            if [ -d "$dir" ]; then
-              name="$(basename "$dir")"
-              allure generate "$dir" --clean -o "site/reports/$name"
-            fi
-          done
+        run: make report
 
       - name: Generate portal page
         run: |
@@ -90,10 +73,10 @@ jobs:
             <h1>sdet-toolbox report portal</h1>
             <p class="meta">Generated from branch: ${GITHUB_REF_NAME}</p>
             <ul>
-              <li><a href="reports/allure-results-ui-playwright-smoke/index.html">UI smoke report</a></li>
-              <li><a href="reports/allure-results-api-requests-pytest/index.html">API tests report</a></li>
-              <li><a href="reports/allure-results-contract-testing/index.html">Contract tests report</a></li>
-              <li><a href="reports/allure-results-data-quality-tests/index.html">Data quality report</a></li>
+              <li><a href="reports/ui-playwright-smoke/index.html">UI smoke report</a></li>
+              <li><a href="reports/api-requests-pytest/index.html">API tests report</a></li>
+              <li><a href="reports/contract-testing/index.html">Contract tests report</a></li>
+              <li><a href="reports/data-quality-tests/index.html">Data quality report</a></li>
               <li><a href="https://github.com/rmpetrov/sdet-toolbox/actions/workflows/ci.yml">CI workflow runs</a></li>
               <li><a href="https://github.com/rmpetrov/sdet-toolbox/tree/main/mini-projects">Mini-projects</a></li>
               <li><a href="https://github.com/rmpetrov/sdet-toolbox/tree/main/docs">Playbooks</a></li>
